--- a/config.json
+++ b/config.json
@@ -5,11 +5,10 @@
 	"port": 8080,
 	"dpe": false,
 	"commonData": ["data"],
-	"bildAddOn": [],
 	"defaultLayout": "layout.html", 
 	"emptyLayout": "empty_layout.html", 
 	"contentOnly": false,
-	"storage": "https://path-to-blob",
+	"storage": "https://your-path-to-blob",
 	"buildIgnore": ["less", "javascripts/sources"],
 	"pages": [
 		{
