--- a/config.json
+++ b/config.json
@@ -11,6 +11,10 @@
 	"storage": "https://your-path-to-blob",
 	"buildIgnore": ["less", "javascripts/sources"],
 	"assetsHash": true,
+	"optimizeImages": [
+		"public/images/*",
+		"storage/images*"
+	],
 	"pages": [
 		{
 			"name": "index",
