--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-svg-symbols": "^2.0.2",
+    "gulp-svgo": "^1.2.5",
     "gulp-uglify": "^1.5.3",
     "less-plugin-autoprefix": "^1.5.1",
     "less-plugin-clean-css": "^1.5.1",
