--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "serve-favicon": "~2.5.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "babel-core": "^6.26.3",
     "babel-preset-env": "^1.6.1",
     "del": "^3.0.0",
     "fancy-log": "^1.3.2",
-    "gulp": "^4.0.0",
+    "gulp": "^3.9.1",
     "gulp-append-prepend": "^1.0.3",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.0",
