--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "cookie-parser": "~1.4.3",
     "debug": "~4.1.0",
     "express": "~4.16.4",
-    "lodash": "^4.17.11",
     "morgan": "~1.9.1",
     "nunjucks": "^3.1.4",
     "serve-favicon": "~2.5.0"
@@ -43,6 +42,7 @@
     "less-plugin-autoprefix": "^2.0.0",
     "less-plugin-clean-css": "^1.5.1",
     "nanoid": "^2.0.0",
-    "run-sequence": "^2.2.1"
+    "run-sequence": "^2.2.1",
+    "lodash": "^4.17.11"
   }
 }
