--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starter",
-  "version": "1.1.5",
+  "version": "2.0.0",
   "private": true,
   "engine-strict": true,
   "engines": {
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "start": "node ./bin/www",
-    "server": "gulp"
+    "watch": "set NODE_ENV=development&&gulp",
+    "build": "set NODE_ENV=production&&node starter/build.js&&gulp build"
   },
   "dependencies": {
     "body-parser": "~1.18.3",
@@ -32,17 +33,18 @@
     "gulp-concat": "^2.6.0",
     "gulp-copy": "^4.0.1",
     "gulp-html-prettify": "0.0.1",
-    "gulp-imagemin": "^5.0.3",
+    "gulp-if": "^2.0.2",
     "gulp-less": "^4.0.1",
     "gulp-live-server": "0.0.31",
     "gulp-notify": "^3.2.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-svg-symbols": "^3.2.3",
+    "gulp-tinypng-compress": "^1.2.1",
     "gulp-uglify": "^3.0.1",
     "less-plugin-autoprefix": "^2.0.0",
     "less-plugin-clean-css": "^1.5.1",
+    "lodash": "^4.17.11",
     "nanoid": "^2.0.0",
-    "run-sequence": "^2.2.1",
-    "lodash": "^4.17.11"
+    "run-sequence": "^2.2.1"
   }
 }
