--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node ./bin/www",
-    "watch": "set NODE_ENV=development&&gulp",
+    "dev": "set NODE_ENV=development&&gulp",
     "build": "set NODE_ENV=production&&node starter/build.js&&gulp build"
   },
   "dependencies": {
